# engram

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  RELEASE_NOTES.md  ToDo.md  test.relgaz
.cargo/: config.toml
crates/engram-a2a/: Cargo.toml
crates/engram-a2a/src/: card.rs  discovery.rs  lib.rs  notification.rs  skill.rs  streaming.rs  task.rs
crates/engram-action/: Cargo.toml
crates/engram-action/src/: condition.rs  effects.rs  engine.rs  error.rs  lib.rs  rule_parser.rs  types.rs
crates/engram-api/: Cargo.toml  build.rs
crates/engram-api/proto/: engram.proto
crates/engram-api/src/: auth.rs  grpc.rs  handlers.rs  lib.rs  mcp.rs  mesh.rs  natural.rs  secrets.rs  server.rs  state.rs  tools.rs  types.rs
crates/engram-api/src/handlers/: admin.rs  assess.rs  chat.rs  chat_analysis.rs  chat_investigation.rs  chat_reporting.rs  chat_temporal.rs  config.rs  debate.rs  document.rs  fact.rs  ingest.rs  kb.rs  mod.rs  models.rs  proxy.rs  query.rs  secrets.rs  seed.rs  sources.rs  store.rs  stream.rs  web_search.rs
crates/engram-api/src/handlers/debate/: agents.rs  llm.rs  mod.rs  modes.rs  research.rs  synthesis.rs  types.rs
crates/engram-api/src/tools/: actions.rs  analysis.rs  knowledge.rs  mod.rs
crates/engram-assess/: Cargo.toml
crates/engram-assess/src/: engine.rs  lib.rs  store.rs  types.rs
crates/engram-compute/: Cargo.toml
crates/engram-compute/benches/: compute_bench.rs
crates/engram-compute/src/: gpu.rs  lib.rs  npu.rs  planner.rs  simd.rs  vulkan.rs
crates/engram-core/: Cargo.toml
crates/engram-core/benches/: storage_bench.rs
crates/engram-core/src/: events.rs  graph.rs  lib.rs
crates/engram-core/src/graph/: index.rs  learning.rs  maintenance.rs  mod.rs  reasoning.rs  search.rs  store.rs
crates/engram-core/src/index/: bitmap.rs  embed_api.rs  embed_onnx.rs  embedding.rs  fulltext.rs  hash.rs  hnsw.rs  hybrid.rs  mod.rs  query.rs  temporal.rs
crates/engram-core/src/learning/: confidence.rs  contradiction.rs  cooccurrence.rs  correction.rs  decay.rs  evidence.rs  inference.rs  mod.rs  reinforce.rs  rules.rs  tier.rs
crates/engram-core/src/storage/: brain_file.rs  doc_store.rs  edge.rs  error.rs  header.rs  mmap.rs  mod.rs  node.rs  props.rs  type_registry.rs  wal.rs
crates/engram-ingest/: Cargo.toml
crates/engram-ingest/src/: anno_backend.rs  confidence.rs  conflict.rs  dedup.rs  document.rs  error.rs  fact_extract.rs  file_source.rs  gazetteer.rs  gliner2_backend.rs  gliner_backend.rs  lang.rs  learned_patterns.rs  learned_trust.rs  ledger.rs  lib.rs  llm_ner.rs  mesh_fast_path.rs  ner_chain.rs  pdf.rs  pipeline.rs  rel_chain.rs  rel_gazetteer.rs  rel_glirel.rs  rel_kge.rs  rel_knowledge_base.rs  rel_nli.rs  rel_traits.rs  rel_type_templates.rs  resolver.rs  rules.rs  scheduler.rs  source.rs  spacy.rs  subsumption.rs  traits.rs  types.rs
crates/engram-ingest/src/rel_knowledge_base/: entity_link.rs  mod.rs  sparql.rs  tests.rs
crates/engram-intel/: Cargo.toml
crates/engram-intel/src/: classifier.rs  lib.rs  license.rs  probability.rs  queries.rs  tiers.rs
crates/engram-mesh/: Cargo.toml
crates/engram-mesh/src/: audit.rs  bloom.rs  conflict.rs  gossip.rs  identity.rs  lib.rs  peer.rs  sync.rs  trust.rs
crates/engram-reason/: Cargo.toml
crates/engram-reason/src/: asymmetric.rs  confidence.rs  coordinated.rs  enrichment.rs  error.rs  federated.rs  frontier.rs  lib.rs  llm_suggestions.rs  mesh_gaps.rs  profiles.rs  queries.rs  scanner.rs  scoring.rs  structural.rs  temporal.rs  types.rs
crates/engram-ui/: Cargo.toml  Trunk.toml  index.html
crates/engram-ui/css/: style.css
crates/engram-ui/js/: graph-bridge.js
crates/engram-ui/src/: app.rs  auth.rs  main.rs  utils.rs
crates/engram-ui/src/api/: mod.rs  types.rs
crates/engram-ui/src/components/: assessment_wizard.rs  auth_screen.rs  chat_panel.rs  chat_types.rs  collapsible_section.rs  crud_modal.rs  detail_modal.rs  explore_controls.rs  graph_canvas.rs  mod.rs  modal.rs  nav.rs  onboarding_wizard.rs  relation_review.rs  settings.rs  source_wizard.rs  sse_listener.rs  stat_card.rs  table.rs  toast.rs  warning_banner.rs
crates/engram-ui/src/components/chat_panel/: cards.rs  context.rs  dispatch.rs  help.rs  intent.rs  markdown.rs  mod.rs  tool_cards.rs  tools.rs  view.rs
crates/engram-ui/src/components/chat_panel/cards/: actions.rs  analysis.rs  assessment.rs  investigation.rs  mod.rs  reporting.rs  temporal.rs
crates/engram-ui/src/components/detail_modal/: connections.rs  edit.rs  info.rs  investigate.rs  mod.rs
crates/engram-ui/src/components/onboarding_wizard/: mod.rs  presets.rs  steps_config.rs  steps_pipeline.rs
crates/engram-ui/src/pages/: actions.rs  dashboard.rs  debate.rs  facts.rs  gaps.rs  graph.rs  import.rs  ingest.rs  insights.rs  learning.rs  mesh.rs  mod.rs  nl.rs  node.rs  not_found.rs  search.rs  security.rs  sources.rs  system.rs
crates/engram-ui/src/pages/debate/: activity_feed.rs  agent_card.rs  controls.rs  evidence_board.rs  mod.rs  war_room.rs
crates/engram-ui/src/pages/graph/: mod.rs  search.rs  sidebar.rs
crates/engram-ui/src/pages/insights/: assessments.rs  conflicts.rs  documents.rs  gaps.rs  mod.rs
crates/engram-ui/src/pages/system/: add_provider.rs  connection.rs  database.rs  embedding.rs  llm.rs  mod.rs  ner.rs  presets.rs  rules.rs  secrets.rs  security_tab.rs
docs/: BUILD-PLAN-anno-nli-migration.md  BUILD-PLAN-v1.1.0.md  DESIGN-anno-nli-migration.md  DESIGN-v1.1.0.md  a2a-protocol.md  comparison.md  compute-backends.md  design-chat.md  design-explore-enhancements.md  design-explore-v2.md  design-explore-v3-performance.md  design-gliner-onnx-migration.md  design-insights.md  design-seed-enrichment.md  design-system-page-rewrite.md  eval-re-approaches.md  http-api.md  integrations.md  knowledge-mesh.md  (+6 more)
tools/engram-ner/: Cargo.toml
tools/engram-ner/src/: main.rs
tools/engram-rel/: Cargo.toml  export_glirel_onnx.py
tools/engram-rel/src/: main.rs
tools/eval-re/: Cargo.toml  export_gliner2_onnx.py  test_gliner2.py  test_nli_baseline.sh
tools/eval-re/src/: main.rs
(+102 files in other folders)
