[workspace]
resolver = "2"
members = [
    "crates/engram-core",
    "crates/engram-compute",
    "crates/engram-inference",
    "crates/engram-learning",
    "crates/engram-mesh",
    "crates/engram-a2a",
    "crates/engram-api",
]
exclude = [
    "crates/engram-intel",  # WASM crate -- built separately via wasm-pack
]

[package]
name = "engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[features]
default = []
mesh = ["engram-api/mesh", "engram-mesh"]
llm = ["engram-api/llm"]
onnx = ["engram-core/onnx"]
grpc = ["engram-api/grpc"]

[dependencies]
engram-core = { path = "crates/engram-core" }
engram-compute = { path = "crates/engram-compute" }
engram-api = { path = "crates/engram-api" }
engram-mesh = { path = "crates/engram-mesh", optional = true }
tokio = { workspace = true }

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "LicenseRef-Proprietary"
repository = "https://github.com/dx111ge/engram"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
engram-core = { path = "crates/engram-core" }
engram-api = { path = "crates/engram-api" }
engram-compute = { path = "crates/engram-compute" }
engram-mesh = { path = "crates/engram-mesh" }
engram-a2a = { path = "crates/engram-a2a" }
serde_json = { workspace = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
