[workspace]
resolver = "2"
members = [
    "crates/engram-core",
    "crates/engram-compute",
    "crates/engram-inference",
    "crates/engram-learning",
    "crates/engram-mesh",
    "crates/engram-a2a",
    "crates/engram-api",
    "crates/engram-ingest",
    "crates/engram-action",
    "crates/engram-reason",
    "crates/engram-assess",
]
exclude = [
    "crates/engram-intel",  # WASM crate -- built separately via wasm-pack
    "crates/engram-ui",     # WASM crate -- built separately via trunk
    "tools/engram-ner",     # Separate workspace -- uses ort rc.9 via gline-rs
    "tools/engram-rel",     # Separate workspace -- standalone ONNX relation extraction
]

[package]
name = "engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[features]
default = []
all = ["mesh", "llm", "grpc", "ingest", "actions", "reason", "assess", "onnx", "anno", "https"]
https = ["engram-core/https"]
mesh = ["engram-api/mesh", "engram-mesh"]
llm = ["engram-api/llm"]
onnx = ["engram-core/onnx", "engram-api/onnx"]
grpc = ["engram-api/grpc"]
ingest = ["engram-api/ingest", "engram-ingest"]
actions = ["engram-api/actions", "engram-action"]
reason = ["engram-api/reason", "engram-reason"]
assess = ["engram-api/assess", "engram-assess"]
anno = ["engram-ingest/anno", "engram-api/anno"]

[dependencies]
engram-core = { path = "crates/engram-core" }
engram-compute = { path = "crates/engram-compute" }
engram-api = { path = "crates/engram-api" }
engram-mesh = { path = "crates/engram-mesh", optional = true }
engram-ingest = { path = "crates/engram-ingest", optional = true }
engram-action = { path = "crates/engram-action", optional = true }
engram-reason = { path = "crates/engram-reason", optional = true }
engram-assess = { path = "crates/engram-assess", optional = true }
tokio = { workspace = true }

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"
repository = "https://github.com/dx111ge/engram"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
engram-core = { path = "crates/engram-core" }
engram-api = { path = "crates/engram-api" }
engram-compute = { path = "crates/engram-compute" }
engram-mesh = { path = "crates/engram-mesh" }
engram-a2a = { path = "crates/engram-a2a", features = ["ingest"] }
engram-assess = { path = "crates/engram-assess" }
serde_json = { workspace = true }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
