[workspace]
resolver = "2"
members = [
    "crates/engram-core",
    "crates/engram-compute",
    "crates/engram-inference",
    "crates/engram-learning",
    "crates/engram-mesh",
    "crates/engram-a2a",
    "crates/engram-api",
    "crates/engram-ingest",
    "crates/engram-action",
    "crates/engram-reason",
    "crates/engram-assess",
]
exclude = [
    "crates/engram-intel",  # WASM crate -- built separately via wasm-pack
    "crates/engram-ui",     # WASM crate -- built separately via trunk
    "tools/engram-ner",     # Separate workspace -- uses ort rc.9 via gline-rs
    "tools/engram-rel",     # Separate workspace -- standalone ONNX relation extraction
]

[package]
name = "engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[features]
default = []
all = ["mesh", "llm", "grpc", "ingest", "actions", "reason", "assess", "onnx", "gliner2", "https", "pdf"]
https = ["engram-core/https"]
mesh = ["engram-api/mesh", "engram-mesh"]
llm = ["engram-api/llm"]
onnx = ["engram-core/onnx", "engram-api/onnx"]
grpc = ["engram-api/grpc"]
ingest = ["engram-api/ingest", "engram-ingest"]
actions = ["engram-api/actions", "engram-action"]
reason = ["engram-api/reason", "engram-reason"]
assess = ["engram-api/assess", "engram-assess"]
gliner2 = ["engram-api/gliner2", "ingest"]
directml = ["engram-api/directml", "gliner2"]  # GPU: DirectML (Windows)
cuda = ["engram-api/cuda", "gliner2"]           # GPU: CUDA (Linux)
coreml = ["engram-api/coreml", "gliner2"]       # GPU: CoreML (macOS)
pdf = ["engram-api/pdf"]

[dependencies]
engram-core = { path = "crates/engram-core" }
engram-compute = { path = "crates/engram-compute" }
engram-api = { path = "crates/engram-api" }
engram-mesh = { path = "crates/engram-mesh", optional = true }
engram-ingest = { path = "crates/engram-ingest", optional = true }
engram-action = { path = "crates/engram-action", optional = true }
engram-reason = { path = "crates/engram-reason", optional = true }
engram-assess = { path = "crates/engram-assess", optional = true }
tokio = { workspace = true }

[workspace.package]
version = "1.1.3"
edition = "2024"
license = "LicenseRef-Proprietary"
repository = "https://github.com/dx111ge/engram"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
engram-core = { path = "crates/engram-core" }
engram-api = { path = "crates/engram-api", features = ["assess", "actions", "reason", "ingest"] }
engram-compute = { path = "crates/engram-compute" }
engram-mesh = { path = "crates/engram-mesh" }
engram-a2a = { path = "crates/engram-a2a", features = ["ingest"] }
engram-assess = { path = "crates/engram-assess" }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
pdf-extract = { version = "0.7" }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
