[package]
name = "engram-a2a"
description = "Google A2A protocol implementation for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ingest = ["engram-ingest", "engram-api/ingest"]

[dependencies]
engram-core = { path = "../engram-core" }
engram-api = { path = "../engram-api" }
engram-reason = { path = "../engram-reason" }
engram-ingest = { path = "../engram-ingest", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
