[package]
name = "engram-action"
description = "Event-driven action engine for engram: rules, effects, scheduling"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
webhooks = ["dep:reqwest"]  # External webhook effects

[dependencies]
engram-core = { path = "../engram-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile = "3"
