[package]
name = "engram-api"
description = "HTTP/gRPC/MCP server for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
llm = []
mesh = ["engram-mesh"]
ingest = ["engram-ingest"]
actions = ["engram-action"]
reason = ["engram-reason"]
grpc = ["tonic", "prost"]

[dependencies]
engram-core = { path = "../engram-core" }
engram-compute = { path = "../engram-compute" }
engram-mesh = { path = "../engram-mesh", optional = true }
engram-ingest = { path = "../engram-ingest", optional = true }
engram-action = { path = "../engram-action", optional = true }
engram-reason = { path = "../engram-reason", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2"
tonic = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
