[package]
name = "engram-api"
description = "HTTP/gRPC/MCP server for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
llm = []
mesh = ["engram-mesh"]
ingest = ["engram-ingest"]
gliner2 = ["engram-ingest/gliner2"]
directml = ["gliner2", "engram-ingest/directml"]   # GPU via DirectML (Windows)
cuda = ["gliner2", "engram-ingest/cuda"]             # GPU via CUDA (Linux)
coreml = ["gliner2", "engram-ingest/coreml"]         # GPU via CoreML (macOS)
actions = ["engram-action"]
reason = ["engram-reason"]
assess = ["engram-assess"]
grpc = ["tonic", "prost"]
onnx = ["engram-core/onnx"]
pdf = ["dep:pdf-extract", "engram-ingest?/pdf"]

[dependencies]
engram-core = { path = "../engram-core" }
engram-compute = { path = "../engram-compute" }
engram-mesh = { path = "../engram-mesh", optional = true }
engram-ingest = { path = "../engram-ingest", optional = true }
engram-action = { path = "../engram-action", optional = true }
engram-reason = { path = "../engram-reason", optional = true }
engram-assess = { path = "../engram-assess", optional = true }
aes-gcm = "0.10"
argon2 = "0.5"
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2"
dom_smoothie = "0.17"
tonic = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
pdf-extract = { version = "0.7", optional = true }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
