[package]
name = "engram-compute"
description = "GPU/NPU/CPU compute abstraction for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
tracing = { workspace = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
