[package]
name = "engram-core"
description = "Storage engine and graph operations for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["ort", "tokenizers", "ndarray"]

[dependencies]
engram-compute = { path = "../engram-compute" }
thiserror = { workspace = true }
tracing = { workspace = true }
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false
