[package]
name = "engram-core"
description = "Storage engine and graph operations for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["ort", "tokenizers", "ndarray"]
https = ["reqwest"]

[dependencies]
engram-compute = { path = "../engram-compute" }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"], optional = true }
sha2 = "0.10"
zstd = "0.13"
crc32fast = "1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false
