[package]
name = "engram-ingest"
description = "Ingest pipeline for engram: NER, entity resolution, conflict detection"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
lang-detect = ["dep:whatlang"]  # Language detection via whatlang
anno = []                         # GLiNER NER via external engram-ner binary
glirel = []                       # GLiREL relation extraction via external engram-rel binary
spacy = []                       # Feature-gated SpaCy HTTP sidecar integration
llm-ner = []                    # Feature-gated LLM fallback NER
file-source = ["dep:notify"]    # File watching source with notify crate

[dependencies]
engram-core = { path = "../engram-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rayon = "1"
regex = "1"
strsim = "0.11"
toml = "0.8"
whatlang = { version = "0.18", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
notify = { version = "7", optional = true }

[dev-dependencies]
tempfile = "3"
