[package]
name = "engram-ingest"
description = "Ingest pipeline for engram: NER, entity resolution, conflict detection"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
lang-detect = ["dep:whatlang"]  # Language detection via whatlang
gliner2 = ["dep:ort", "dep:ndarray", "dep:tokenizers"]  # GLiNER2 in-process NER+RE via ONNX
directml = ["gliner2", "ort/directml"]   # GPU via DirectML (Windows/DX12)
cuda = ["gliner2", "ort/cuda"]           # GPU via CUDA (Linux/NVIDIA)
coreml = ["gliner2", "ort/coreml"]       # GPU via CoreML (macOS/Apple Silicon)
spacy = []                       # Feature-gated SpaCy HTTP sidecar integration
llm-ner = []                    # Feature-gated LLM fallback NER
file-source = ["dep:notify"]    # File watching source with notify crate
pdf = ["dep:pdf-extract"]       # PDF text extraction via pdf-extract

[dependencies]
engram-core = { path = "../engram-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rayon = "1"
regex = "1"
strsim = "0.11"
toml = "0.8"
whatlang = { version = "0.18", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "cookies"] }
dom_smoothie = "0.17"
notify = { version = "7", optional = true }
pdf-extract = { version = "0.7", optional = true }
ort = { version = "=2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }

[dev-dependencies]
tempfile = "3"
