[package]
name = "engram-intel"
version = "0.1.0"
edition = "2024"
description = "Geopolitical intelligence engine -- compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false    # Bundled wasm-opt too old for bulk-memory; Rust LTO is enough

[profile.release]
opt-level = "z"     # Optimize for binary size
lto = true
codegen-units = 1
strip = true
