[package]
name = "engram-mesh"
description = "Knowledge mesh federation for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engram-core = { path = "../engram-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
