[package]
name = "engram-reason"
description = "Black area detection, knowledge gap analysis, and enrichment for engram"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
mesh = ["engram-mesh"]
llm = []

[dependencies]
engram-core = { path = "../engram-core" }
engram-mesh = { path = "../engram-mesh", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
