[package]
name = "engram-ner"
version = "1.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
description = "GLiNER zero-shot NER backend for engram"

[[bin]]
name = "engram-ner"
path = "src/main.rs"

[dependencies]
gline-rs = "1.0"
orp = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
directml = ["gline-rs/directml"]
cuda = ["gline-rs/cuda"]
tensorrt = ["gline-rs/tensorrt"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
