[package]
name = "engram-rel"
version = "1.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
description = "NLI-based zero-shot relation extraction backend for engram"

[[bin]]
name = "engram-rel"
path = "src/main.rs"

[dependencies]
ort = "=2.0.0-rc.12"
ndarray = "0.17"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
directml = ["ort/directml"]
cuda = ["ort/cuda"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
