[package]
name = "eval-re"
version = "0.1.0"
edition = "2021"
publish = false
description = "RE approach evaluation: GLiNER-Multitask vs NLI"

[[bin]]
name = "eval-re"
path = "src/main.rs"

[workspace]

[dependencies]
composable = "0.9"
gline-rs = "1.0"
orp = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
